<resources>
    <string name="app_name">Park Pass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>




    <string-array name="spinnerStrings">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
        <item>A9</item>

        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>B6</item>
        <item>B7</item>
        <item>B8</item>
        <item>B9</item>

        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
        <item>C6</item>
        <item>C7</item>
        <item>C8</item>
        <item>C9</item>
    </string-array>
    <!-- SWITCH -->
    <string name="Switch">Are you an</string>
    <string name="or">or a</string>
    <string name="op">Operator?</string>
    <string name="cust">Customer?</string>

    <!--  ONBOARDING -->
    <string name="onboard_title_1">Welcome to Park Pass!</string>
    <string name="onboard_title_2">Easy to use!</string>
    <string name="onboard_title_3">Hassle free exit!</string>

    <string name="onboard_desc_1">Hey there! 🚗 Welcome to EasyPark, your hassle-free parking solution. Let\'s get you started!\n
\n
Tap next or swipe the screen to the left to continue.</string>
    <string name="onboard_desc_2">Enter your parking spot code, name, and plate number. Done.</string>
    <string name="onboard_desc_3">When exiting, just tell the operator the name you inputted and pay.</string>
    <string name="add_an_operator_account">Add an Operator Account</string>
    <string name="insert_master_password">INSERT MASTER PASSWORD</string>
    <string name="add_account">Add Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pas_sword">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_as_operator">Sign in</string>
    <string name="title_activity_operator">OperatorActivity</string>
    <string name="options">Options</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="register">Register</string>
    <string name="login_instead">Login instead</string>
    <string name="register_instead">Register instead</string>
    <string name="code">CODE</string>
    <string name="time">TIME</string>
    <string name="name">NAME</string>
    <string name="time_entered">Time Entered</string>
    <string name="plate_number">Plate Number</string>
    <string name="time_exited">Time Exited</string>
    <string name="per_hour">Price for First 2 Hours: ₱30.00 + ₱5.00 per hour</string>
    <string name="total_time_parked">Total Time Parked</string>
    <string name="total_price">Total Price</string>
    <string name="customer_payed_upload_receipt_to_database">Customer Payed - Upload Receipt to Database</string>
    <string name="parking_spot_code">Parking Spot Code</string>
    <string name="submit">Submit</string>
</resources>